--- a/etc/views/reports.xml
+++ b/etc/views/reports.xml
@@ -20,9 +20,9 @@
 
         <processors>
             <insert match="/root" nodes="
-            view('api.availability.rotating.caches',entry('group_type','ngi')|entry('granularity','MONTHLY')|entry('diff','0')|entry('delete',$delete))
-            |view('api.availability.rotating.caches',entry('group_type','ngi')|entry('granularity','MONTHLY')|entry('diff','1')|entry('delete',$delete))
-            |view('api.availability.rotating.caches',entry('group_type','ngi')|entry('granularity','MONTHLY')|entry('diff','2')|entry('delete',$delete))">
+            view('api.availability.rotating.caches',entry('group_type','ngi')|entry('granularity','monthly')|entry('diff','0')|entry('delete',$delete))
+            |view('api.availability.rotating.caches',entry('group_type','ngi')|entry('granularity','monthly')|entry('diff','1')|entry('delete',$delete))
+            |view('api.availability.rotating.caches',entry('group_type','ngi')|entry('granularity','monthly')|entry('diff','2')|entry('delete',$delete))">
 
             </insert>
         </processors>
@@ -42,9 +42,9 @@
 
         <processors>
             <insert match="/root" nodes="
-            view('api.availability.rotating.caches',entry('group_type','ngi')|entry('granularity','DAILY')|entry('diff','0')|entry('delete',$delete))
-            |view('api.availability.rotating.caches',entry('group_type','ngi')|entry('granularity','DAILY')|entry('diff','1')|entry('delete',$delete))
-            |view('api.availability.rotating.caches',entry('group_type','ngi')|entry('granularity','DAILY')|entry('diff','2')|entry('delete',$delete))">
+            view('api.availability.rotating.caches',entry('group_type','ngi')|entry('granularity','daily')|entry('diff','0')|entry('delete',$delete))
+            |view('api.availability.rotating.caches',entry('group_type','ngi')|entry('granularity','daily')|entry('diff','1')|entry('delete',$delete))
+            |view('api.availability.rotating.caches',entry('group_type','ngi')|entry('granularity','daily')|entry('diff','2')|entry('delete',$delete))">
 
             </insert>
         </processors>
@@ -80,9 +80,9 @@
 
         <processors>
             <insert match="/root" nodes="
-            view('api.availability.rotating.caches',entry('group_type','ngi')|entry('granularity','MONTHLY')|entry('start_time',$starttime1)|entry('end_time',$endtime1))
-            |view('api.availability.rotating.caches',entry('group_type','ngi')|entry('granularity','MONTHLY')|entry('start_time',$starttime2)|entry('end_time',$endtime2))
-            |view('api.availability.rotating.caches',entry('group_type','ngi')|entry('granularity','MONTHLY')|entry('start_time',$starttime3)|entry('end_time',$endtime3))">
+            view('api.availability.rotating.caches',entry('group_type','ngi')|entry('granularity','monthly')|entry('start_time',$starttime1)|entry('end_time',$endtime1))
+            |view('api.availability.rotating.caches',entry('group_type','ngi')|entry('granularity','monthly')|entry('start_time',$starttime2)|entry('end_time',$endtime2))
+            |view('api.availability.rotating.caches',entry('group_type','ngi')|entry('granularity','monthly')|entry('start_time',$starttime3)|entry('end_time',$endtime3))">
 
             </insert>
         </processors>
@@ -469,9 +469,9 @@
 
         <processors>
             <insert match="/root" nodes="
-            view('api.availability.rotating.caches',entry('group_type','servicegroups')|entry('granularity','MONTHLY')|entry('report',$report)|entry('diff','0')|entry('delete',$delete))
-            |view('api.availability.rotating.caches',entry('group_type','servicegroups')|entry('granularity','MONTHLY')|entry('report',$report)|entry('diff','1')|entry('delete',$delete))
-            |view('api.availability.rotating.caches',entry('group_type','servicegroups')|entry('granularity','MONTHLY')|entry('report',$report)|entry('diff','2')|entry('delete',$delete))">
+            view('api.availability.rotating.caches',entry('group_type','servicegroups')|entry('granularity','monthly')|entry('report',$report)|entry('diff','0')|entry('delete',$delete))
+            |view('api.availability.rotating.caches',entry('group_type','servicegroups')|entry('granularity','monthly')|entry('report',$report)|entry('diff','1')|entry('delete',$delete))
+            |view('api.availability.rotating.caches',entry('group_type','servicegroups')|entry('granularity','monthly')|entry('report',$report)|entry('diff','2')|entry('delete',$delete))">
 
             </insert>
         </processors>
@@ -507,9 +507,9 @@
 
         <processors>
             <insert match="/root" nodes="
-            view('api.availability.rotating.caches',entry('group_type','servicegroups')|entry('granularity','MONTHLY')|entry('start_time',$starttime1)|entry('end_time',$endtime1)|entry('report',$report))
-            |view('api.availability.rotating.caches',entry('group_type','servicegroups')|entry('granularity','MONTHLY')|entry('start_time',$starttime2)|entry('end_time',$endtime2)|entry('report',$report))
-            |view('api.availability.rotating.caches',entry('group_type','servicegroups')|entry('granularity','MONTHLY')|entry('start_time',$starttime3)|entry('end_time',$endtime3)|entry('report',$report))">
+            view('api.availability.rotating.caches',entry('group_type','servicegroups')|entry('granularity','monthly')|entry('start_time',$starttime1)|entry('end_time',$endtime1)|entry('report',$report))
+            |view('api.availability.rotating.caches',entry('group_type','servicegroups')|entry('granularity','monthly')|entry('start_time',$starttime2)|entry('end_time',$endtime2)|entry('report',$report))
+            |view('api.availability.rotating.caches',entry('group_type','servicegroups')|entry('granularity','monthly')|entry('start_time',$starttime3)|entry('end_time',$endtime3)|entry('report',$report))">
 
             </insert>
         </processors>
@@ -532,9 +532,9 @@
 
         <processors>
             <insert match="/root" nodes="
-            view('api.availability.rotating.caches',entry('group_type','servicegroups')|entry('granularity','DAILY')|entry('report',$report)|entry('diff','0')|entry('delete',$delete))
-            |view('api.availability.rotating.caches',entry('group_type','servicegroups')|entry('granularity','DAILY')|entry('report',$report)|entry('diff','1')|entry('delete',$delete))
-            |view('api.availability.rotating.caches',entry('group_type','servicegroups')|entry('granularity','DAILY')|entry('report',$report)|entry('diff','2')|entry('delete',$delete))">
+            view('api.availability.rotating.caches',entry('group_type','servicegroups')|entry('granularity','daily')|entry('report',$report)|entry('diff','0')|entry('delete',$delete))
+            |view('api.availability.rotating.caches',entry('group_type','servicegroups')|entry('granularity','daily')|entry('report',$report)|entry('diff','1')|entry('delete',$delete))
+            |view('api.availability.rotating.caches',entry('group_type','servicegroups')|entry('granularity','daily')|entry('report',$report)|entry('diff','2')|entry('delete',$delete))">
 
             </insert>
         </processors>
