--- a/etc/views/reports.xml
+++ b/etc/views/reports.xml
@@ -20,16 +20,16 @@
 
         <processors>
             <insert match="/root" nodes="
-            view('api.availability.rotating.caches',entry('group_type','ngi')|entry('granularity','monthly')|entry('diff','0')|entry('delete',$delete))
-            |view('api.availability.rotating.caches',entry('group_type','ngi')|entry('granularity','monthly')|entry('diff','1')|entry('delete',$delete))
-            |view('api.availability.rotating.caches',entry('group_type','ngi')|entry('granularity','monthly')|entry('diff','2')|entry('delete',$delete))">
+            view('api.availability.rotating.caches',entry('group_type','project')|entry('granularity','monthly')|entry('diff','0')|entry('delete',$delete))
+            |view('api.availability.rotating.caches',entry('group_type','project')|entry('granularity','monthly')|entry('diff','1')|entry('delete',$delete))
+            |view('api.availability.rotating.caches',entry('group_type','project')|entry('granularity','monthly')|entry('diff','2')|entry('delete',$delete))">
 
             </insert>
         </processors>
 
     </view>
 
-    <view name="ngi_reports_daily_cached">
+    <view name="project">
         <info>
             <category>AR reports</category>
             <description>NGI League Reports - cache Rotated</description>
@@ -42,9 +42,9 @@
 
         <processors>
             <insert match="/root" nodes="
-            view('api.availability.rotating.caches',entry('group_type','ngi')|entry('granularity','daily')|entry('diff','0')|entry('delete',$delete))
-            |view('api.availability.rotating.caches',entry('group_type','ngi')|entry('granularity','daily')|entry('diff','1')|entry('delete',$delete))
-            |view('api.availability.rotating.caches',entry('group_type','ngi')|entry('granularity','daily')|entry('diff','2')|entry('delete',$delete))">
+            view('api.availability.rotating.caches',entry('group_type','project')|entry('granularity','daily')|entry('diff','0')|entry('delete',$delete))
+            |view('api.availability.rotating.caches',entry('group_type','project')|entry('granularity','daily')|entry('diff','1')|entry('delete',$delete))
+            |view('api.availability.rotating.caches',entry('group_type','project')|entry('granularity','daily')|entry('diff','2')|entry('delete',$delete))">
 
             </insert>
         </processors>
@@ -80,9 +80,9 @@
 
         <processors>
             <insert match="/root" nodes="
-            view('api.availability.rotating.caches',entry('group_type','ngi')|entry('granularity','monthly')|entry('start_time',$starttime1)|entry('end_time',$endtime1))
-            |view('api.availability.rotating.caches',entry('group_type','ngi')|entry('granularity','monthly')|entry('start_time',$starttime2)|entry('end_time',$endtime2))
-            |view('api.availability.rotating.caches',entry('group_type','ngi')|entry('granularity','monthly')|entry('start_time',$starttime3)|entry('end_time',$endtime3))">
+            view('api.availability.rotating.caches',entry('group_type','project')|entry('granularity','monthly')|entry('start_time',$starttime1)|entry('end_time',$endtime1))
+            |view('api.availability.rotating.caches',entry('group_type','project')|entry('granularity','monthly')|entry('start_time',$starttime2)|entry('end_time',$endtime2))
+            |view('api.availability.rotating.caches',entry('group_type','project')|entry('granularity','monthly')|entry('start_time',$starttime3)|entry('end_time',$endtime3))">
 
             </insert>
         </processors>
@@ -544,7 +544,7 @@
     <view name="site_reports">
         <info>
             <category>AR reports</category>
-            <description>Community Projects Report</description>
+            <description>Service Groups Report</description>
         </info>
 
         <argument name="month" eval="0"></argument>
@@ -609,7 +609,6 @@
             <processor match="/e:entries" type="InsertProcessor" disabled="$month!=0">
                 <parameter name="nodes"
                   eval="new_attribute('month4',substring(date:add(date:date-time(),'P1D'),0,8))
-                       |new_attribute('month5',substring(date:add(date:date-time(),'P1M'),0,8))
                        |new_attribute('month3',substring(date:add(date:date-time(),'-P1M'),0,8))
                        |new_attribute('month2',substring(date:add(date:date-time(),'-P2M'),0,8))
                        |new_attribute('month1',substring(date:add(date:date-time(),'-P3M'),0,8))"/>
@@ -623,7 +622,7 @@
                    |new_attribute('month1',substring(date:add(concat($month,'-01T00:00:00'),'-P2M'),0,8))"/>
             </processor>
 
-            <insert match="/e:entries"  nodes="new_attribute('description','Community Projects Report')"></insert>
+            <insert match="/e:entries"  nodes="new_attribute('description','Service Groups Report')"></insert>
             <insert match="/e:entries"  nodes="new_attribute('view','site_reports')"></insert>
             <insert match="/e:entries"  nodes="new_attribute('ngi',$ngi)"></insert>
             <insert match="/e:entries"  nodes="new_attribute('related_view','site_ar')"></insert>
