--- a/etc/views/apiCalls.xml
+++ b/etc/views/apiCalls.xml
@@ -1,4 +1,4 @@
-="http://software.in2p3.fr/lavoisier/config.xsd"
+<config xmlns="http://software.in2p3.fr/lavoisier/config.xsd"
         xmlns:date="http://exslt.org/dates-and-times"
         xmlns:xi="http://www.w3.org/2001/XInclude"
         xmlns:str="http://exslt.org/strings"
