--- a/etc/views/apiCalls.xml
+++ b/etc/views/apiCalls.xml
@@ -150,6 +150,45 @@
 
     </view>
 
+    <view name="api.availability.file.cache">
+
+        <info>
+            <category>API results</category>
+            <description>Sites and NGI AR results in cache</description>
+        </info>
+
+        <argument name="diff">10</argument>
+
+        <argument name="group_type">servicegroups</argument>
+        <argument name="report">Critical</argument>
+        <argument name="granularity">DAILY</argument>
+        <argument name="site">false</argument>
+        <argument name="mode">RW</argument>
+
+
+        <argument name="start_time"></argument>
+        <argument name="end_time"></argument>
+
+
+        <connector type="XMLConnector">
+            <parameter name="content" eval="view('api.availability.call',  entry('report',$report)
+            |entry('group_type',$group_type)
+            |entry('granularity',$granularity)
+            |entry('start_time',$start_time)
+            |entry('end_time',$end_time)
+            |entry('site',$site))">
+            </parameter>
+            <fallback eval="new_element('root')">
+                <exception type="java.io.IOException"></exception>
+            </fallback>
+        </connector>
+
+
+
+
+
+    </view>
+
     <!-- *******************************************************************
 ****               CALL TO THE API
 ****               FOR THE STATUS FIGURES and TIMELINES
