--- a/etc/views/triggers.xml
+++ b/etc/views/triggers.xml
@@ -45,32 +45,28 @@
 
         <processors>
 
-            <element in="root">
+            <!--<element in="root">-->
 
-                <set variable="triggerdelete1">view('ngi_reports_cached',entry('delete',true()))/*</set>
-                <set variable="triggerdelete2">view('ngi_reports_daily_cached',entry('delete',true()))/*</set>
-                
-                <set variable="triggerdelete3">view('site_reports_cached',entry('delete',true()))/*</set>
-                <set variable="triggerdelete4">view('site_reports_cached',entry('availability_profile','egi-fedcloud')|entry('delete',true()))/*</set>
-                <set variable="triggerdelete5">view('site_reports_cached',entry('availability_profile','egi-ops-monitor-critical')|entry('delete',true()))/*</set>
-              
-                <set variable="triggerdelete6">view('site_reports_daily_cached',entry('delete',true()))</set>
-                <set variable="triggerdelete7">view('site_reports_daily_cached',entry('availability_profile','egi-fedcloud')|entry('delete',true()))/*</set>
-                <set variable="triggerdelete8">view('site_reports_daily_cached',entry('availability_profile','egi-ops-monitor-critical')|entry('delete',true()))/*</set>
-                <attribute-create out="action1">'deletions done ... '</attribute-create>
-            </element>
+                <!--<set variable="triggerdelete1">view('ngi_reports_cached',entry('delete',true()))/*</set>-->
+                <!--<set variable="triggerdelete2">view('ngi_reports_daily_cached',entry('delete',true()))/*</set>-->
+                <!---->
+                <!--<set variable="triggerdelete3">view('site_reports_cached',entry('delete',true()))/*</set>-->
+                <!--<set variable="triggerdelete4">view('site_reports_cached',entry('availability_profile','egi-fedcloud')|entry('delete',true()))/*</set>-->
+                <!--<set variable="triggerdelete5">view('site_reports_cached',entry('availability_profile','egi-ops-monitor-critical')|entry('delete',true()))/*</set>-->
+              <!---->
+                <!--<set variable="triggerdelete6">view('site_reports_daily_cached',entry('delete',true()))</set>-->
+                <!--<set variable="triggerdelete7">view('site_reports_daily_cached',entry('availability_profile','egi-fedcloud')|entry('delete',true()))/*</set>-->
+                <!--<set variable="triggerdelete8">view('site_reports_daily_cached',entry('availability_profile','egi-ops-monitor-critical')|entry('delete',true()))/*</set>-->
+                <!--<attribute-create out="action1">'deletions done ... '</attribute-create>-->
+            <!--</element>-->
             <element in="root">
 
                 <set variable="triggercreate1">view('ngi_reports_cached')/*</set>
                 <set variable="triggerdelete2">view('ngi_reports_daily_cached')/*</set>
 
-                <set variable="triggerdelete3">view('site_reports_cached')/*</set>
-                <set variable="triggerdelete4">view('site_reports_cached',entry('availability_profile','egi-fedcloud') )/*</set>
-                <set variable="triggerdelete5">view('site_reports_cached',entry('availability_profile','egi-ops-monitor-critical'))/*</set>
+                <set variable="triggercreate5">view('site_reports_cached')/*</set>
 
-                <set variable="triggerdelete6">view('site_reports_daily_cached')/*</set>
-                <set variable="triggerdelete7">view('site_reports_daily_cached',entry('availability_profile','egi-fedcloud'))/*</set>
-                <set variable="triggerdelete8">view('site_reports_daily_cached',entry('availability_profile','egi-ops-monitor-critical'))/*</set>
+                <set variable="triggercreate9">view('site_reports_daily_cached')</set>
                 <attribute-create out="action2">'creations done ... '</attribute-create>
             </element>
 
@@ -80,6 +76,9 @@
             <trigger type="ViewNotifiedTrigger"></trigger>
             <trigger type="FixedTimeTrigger">
                 <parameter name="hour">7</parameter>
+            </trigger>
+            <trigger type="DeltaTimeTrigger">
+                <parameter name="hours">1</parameter>
             </trigger>
         </cache>
 
